# backend/docs/swagger.json
@@ -1102,6 +1102,13 @@
                 "parent_path": {
                     "type": "string"
                 },
+                "secrets": {
+                    "description": "New: secrets to create with article",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/fceek_dev-pedia_backend_internal_models.CreateContentSecretRequest"
+                    }
+                },
                 "slug": {
                     "type": "string",
                     "maxLength": 100
@@ -1138,6 +1145,32 @@
                 "title": {
                     "type": "string",
                     "maxLength": 200
+                }
+            }
+        },
+        "fceek_dev-pedia_backend_internal_models.CreateContentSecretRequest": {
+            "type": "object",
+            "required": [
+                "classification_level",
+                "content",
+                "secret_key"
+            ],
+            "properties": {
+                "classification_level": {
+                    "type": "integer",
+                    "maximum": 5,
+                    "minimum": 2
+                },
+                "content": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string",
+                    "maxLength": 500
+                },
+                "secret_key": {
+                    "type": "string",
+                    "maxLength": 100
                 }
             }
         },
@@ -1218,6 +1251,13 @@
                 },
                 "parent_path": {
                     "type": "string"
+                },
+                "secrets": {
+                    "description": "New: replace all secrets with this list",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/fceek_dev-pedia_backend_internal_models.CreateContentSecretRequest"
+                    }
                 },
                 "slug": {
                     "type": "string",
